--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,15 +31,15 @@ dev = [
     "pytest>=7.0.0",          # For running tests
     "isort>=5.12.0",          # For import sorting
     "pytest-cov>=3.0.0",      # For test coverage reporting
+    "pytest-depends=1.0.1",   # For test dependency management
     "pytest-mock>=3.14.0",    # For mocking in tests
-    "flake8>=5.0.0",          # For linting
+    "ruff>=0.12.11",          # For linting
     "yapf>=0.40.0",           # For code formatting (YAPF)
     "docformatter>=1.7.5",
 ]
 
-[tool.flake8]
-max-line-length = 79
-exclude = ["__pycache__", "*.pyc", "build", "dist"]
+[tool.ruff]
+line-length = 80
 
 [tool.yapf]
 based_on_style = "pep8"
