--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,10 @@ classifiers = [
 
 [project.optional-dependencies]
 test = [
-    "pytest>=7.0.0",         # For running tests
-    "pytest-cov>=3.0.0",     # For test coverage reporting
-    "pytest-mock>=3.14.0",   # For mocking in tests
+    "pytest>=7.0.0",          # For running tests
+    "pytest-cov>=3.0.0",      # For test coverage reporting
+    "pytest-depends>=1.0.1",  # For test dependency management
+    "pytest-mock>=3.14.0",    # For mocking in tests
 ]
 
 dev = [
