--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -96,10 +96,27 @@ jobs:
         run: |
           docker-compose up --build --remove-orphans --force-recreate --abort-on-container-exit --exit-code-from test
 
-  build:
+  detect_changes:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.event.pull_request.merged == true)  # Only run on push to main or merge to main
-    needs: [test, lint]
+    outputs:
+      changed: ${{ steps.set_changed.outputs.changed }}
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Detect changes in src/
+        id: set_changed
+        run: |
+          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -E '^src/' > /dev/null; then
+            echo "changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "changed=false" >> $GITHUB_OUTPUT
+          fi
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: [test, lint, detect_changes]
+    if: needs.detect_changes.outputs.changed == 'true' && github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.event.pull_request.merged == true)  # Only run on push to main or merge to main
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -122,6 +139,11 @@ jobs:
           LAST_TAG=$(git describe --tags --abbrev=0 || echo "v0.1.0")
           echo "LAST_TAG=$LAST_TAG" >> $GITHUB_ENV
           echo "Last Git Tag: $LAST_TAG"
+
+      - name: Install Requirements
+        run: |
+          pip install --upgrade pip
+          pip install .
 
       - name: Get Current Version
         id: get-current-version
