--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -107,10 +107,17 @@ jobs:
       - name: Detect changes in src/
         id: set_changed
         run: |
-          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -E '^src/' > /dev/null; then
+          # Find a valid base commit to diff against
+          BASE_COMMIT=$(git merge-base HEAD origin/main || echo "")
+          if [ -z "$BASE_COMMIT" ]; then
+            echo "No valid base commit found, assuming changes present."
             echo "changed=true" >> $GITHUB_OUTPUT
           else
-            echo "changed=false" >> $GITHUB_OUTPUT
+            if git diff --name-only $BASE_COMMIT HEAD | grep -E '^src/' > /dev/null; then
+              echo "changed=true" >> $GITHUB_OUTPUT
+            else
+              echo "changed=false" >> $GITHUB_OUTPUT
+            fi
           fi
 
   publish:
