--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -171,6 +171,7 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install .
+          pip install .[publish]
 
       - name: Get Current Version
         id: get-current-version
