Add names to jobs for github to register them as status checks

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,6 +56,7 @@ jobs:
           git push origin HEAD:${{ github.ref }}
 
   lint:
+    name: Lint
     runs-on: ubuntu-latest
     needs: reformat
     steps:
@@ -77,6 +78,7 @@ jobs:
           ruff check ./src
 
   test:
+    name: Test
     runs-on: ubuntu-latest
     needs: reformat
     steps:
