--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -125,21 +125,18 @@ jobs:
             exit 0
           fi
 
-          BASE_COMMIT=$(git merge-base HEAD origin/main || echo "")
+          # Find the last tag reachable from HEAD
+          LAST_TAG=$(git describe --tags --abbrev=0)
+          BASE_COMMIT=$(git rev-list -n 1 "$LAST_TAG")
           echo "BASE_COMMIT=$BASE_COMMIT"
-          if [ -z "$BASE_COMMIT" ]; then
-            echo "No valid base commit found, assuming changes present."
+          echo "Changed files since $LAST_TAG ($BASE_COMMIT):"
+          git diff --name-only $BASE_COMMIT HEAD
+          if git diff --name-only $BASE_COMMIT HEAD | grep -E '^(src/|README)' > /dev/null; then
+            echo "Detected changes in src/ or README"x
             echo "changed=true" >> $GITHUB_OUTPUT
           else
-            echo "Changed files:"
-            git diff --name-only $BASE_COMMIT HEAD
-            if git diff --name-only $BASE_COMMIT HEAD | grep -E '^(src/|README)' > /dev/null; then
-              echo "Detected changes in src/ or README"
-              echo "changed=true" >> $GITHUB_OUTPUT
-            else
-              echo "No changes detected in src/ or README"
-              echo "changed=false" >> $GITHUB_OUTPUT
-            fi
+            echo "No changes detected in src/ or README"
+            echo "changed=false" >> $GITHUB_OUTPUT
           fi
 
   publish:
